<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:id="@+id/request_list_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text=""
        android:textSize="20sp" />

    <Button
        android:id="@+id/accept_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/accept"
        android:layout_gravity="center"
        android:backgroundTint="#008800"/>

    <Button
        android:id="@+id/deny_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FF0000"
        android:text="@string/deny"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/cancel_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FF0000"
        android:text="@string/cancel"
        android:layout_gravity="center" />

</LinearLayout>